fixed z-index of date-picker

--- a/resources/css/App.css
+++ b/resources/css/App.css
@@ -51,10 +51,14 @@
 
 .react-datepicker__input-container {
     width: inherit;
-}
+} 
 
 .react-datepicker-wrapper {
     width: 100%;
+}
+
+.react-datepicker-popper{
+    z-index: 9999 !important;
 }
 
 .select-search {
